--- a/windows/README.org
+++ b/windows/README.org
@@ -49,44 +49,48 @@ The ~sys.conf.dsc.yaml~ file modifies various ~Windows~ system settings.
 
 properties:
   configurationVersion: 0.1.0
+  assertions:
+    - resource: Microsoft.Windows.Developer/OsVersion
+      directives:
+        description: Verify min OS version requirement
+        allowPrerelease: true
+      settings:
+        MinVersion: '10.0.22631'
   resources:
-    # - resource: Microsoft.Windows.Developer/DeveloperMode
-    #   directives:
-    #     description: enable developer mode
-    #     allowPrerelease: true
-    #   settings:
-    #     Ensure: Present
+    - resource: Microsoft.Windows.Developer/DeveloperMode
+      directives:
+        description: Enable developer mode
+        allowPrerelease: true
+      settings:
+        Ensure: Present
     - resource: Microsoft.Windows.Developer/HideFileExtensions
       directives:
-        description: show file extensions
-        allowPrerelease: false
+        description: Show file extensions
+        allowPrerelease: true
       settings:
         Ensure: Absent
     - resource: Microsoft.Windows.Developer/ShowHiddenFiles
       directives:
-        description: show hidden files
-        allowPrerelease: false
+        description: Show hidden files
+        allowPrerelease: true
       settings:
         Ensure: Present
     - resource: Microsoft.Windows.Developer/ShowSecondsInClock
       directives:
-        description: show seconds in clock
-        allowPrerelease: false
+        description: Show seconds in clock
+        allowPrerelease: true
       settings:
         Ensure: Present
-    - resource: Microsoft.Windows.Developer/Taskbar
+    - resource: Microsoft.Windows.Developer/TaskBarAlignment
       directives:
-        description: modify taskbar settings
-        allowPrerelease: false
+        description: Set taskbar alignment to left
+        allowPrerelease: true
       settings:
-        Alignment: Middle # [ KeepCurrentValue, Left ]
-        HideLabelsMode: ShowIconAndLabel # [ KeepCurrentValue, WhenFull, Always ]
-        SearchBoxMode: ShowIconAndLabel # [ KeepCurrentValue, ShowIconOnly, SearchBox, Hide ]
-        RestartExplorer: true # required for `HideLabelsMode` to take effect
+        Alignment: Left # [ KeepCurrentValue, Middle ]
     - resource: Microsoft.Windows.Developer/EnableDarkMode
       directives:
-        description: enable dark mode
-        allowPrerelease: false
+        description: Enable dark mode
+        allowPrerelease: true
       settings:
         Ensure: Present
         RestartExplorer: true # required for changes to take effect
@@ -104,126 +108,133 @@ properties:
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install bat
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: sharkdp.bat
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install dog
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: ogham.dog
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install exiftool
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: OliverBetz.ExifTool
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install eza
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: eza-community.eza
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install fd
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: sharkdp.fd
         source: winget
+    # - resource: Microsoft.WinGet.DSC/WinGetPackage
+    #   directives:
+    #     description: Install ffmpeg
+    #     allowPrerelease: true
+    #   settings:
+    #     id: Gyan.FFmpeg
+    #     source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install fzf
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: junegunn.fzf
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install git
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: Git.Git
         source: winget
-    - resource: Microsoft.WinGet.DSC/WinGetPackage
-      directives:
-        description: Install httpie
-        allowPrerelease: false
-      settings:
-        id: HTTPie.HTTPie
-        source: winget
+    # - resource: Microsoft.WinGet.DSC/WinGetPackage
+    #   directives:
+    #     description: Install httpie
+    #     allowPrerelease: true
+    #   settings:
+    #     id: HTTPie.HTTPie
+    #     source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install hyperfine
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: sharkdp.hyperfine
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install llvm
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: LLVM.LLVM
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install ollama
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: Ollama.Ollama
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install podman
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: RedHat.Podman
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install ripgrep
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
-        id: BurntSushi.ripgrep.MSVC
+        id: BurntSushi.ripgrep.GNU
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install sd
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: chmln.sd
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install starship
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: Starship.Starship
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install tealdeer
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: dbrgn.tealdeer
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install tokei
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: XAMPPRocky.Tokei
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install zoxide
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: ajeetdsouza.zoxide
         source: winget
@@ -290,8 +301,56 @@ disabled = true
 - The following sets up the necessary environment variables for ~PowerShell~ and allows for its execution within the shell.
 
 #+begin_src ps1 :tangle "Microsoft.PowerShell_profile.ps1"
+# FUNCTIONS
+function df {
+get-volume
+}
+
+function head {
+  param($Path, $n = 10)
+  Get-Content $Path -Head $n
+}
+
+function grep($regex, $dir) {
+    if ( $dir ) {
+        Get-ChildItem $dir | select-string $regex
+        return
+    }
+    $input | select-string $regex
+}
+
+function la { Get-ChildItem -Path . -Force | Format-Table -AutoSize }
+function ll { Get-ChildItem -Path . -Force -Hidden | Format-Table -AutoSize }
+
+function pkill($name){
+Get-Process $name --ErrorAction SilentlyContinue | Stop-Process
+}
+
+function reload {
+. $PROFILE
+}
+
+function head {
+  param($Path, $n = 10)
+  Get-Content $Path -Head $n
+}
+
+function sysinfo { Get-ComputerInfo }
+
+function touch($file){
+"" | Out-File $file - Encoding ASCII
+}
+
+function which($name){
+Get-Command $name | Select-Object -ExpandProperty Definition
+}
+
+# STARSHIP
 $ENV:STARSHIP_CONFIG = "$HOME\.starship\starship.toml"
 Invoke-Expression (&starship init powershell)
+
+# ZOXIDE
+Invoke-Expression (& { (zoxide init powershell | Out-String) } )
 #+end_src
 
 ** OPTIONAL UTILS
@@ -355,77 +414,77 @@ properties:
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install emacs
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: GNU.Emacs
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install nvim
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: Neovim.Neovim
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install bun
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: Oven-sh.Bun
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install miktex
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: MiKTeX.MiKTeX
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install python
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: Python.Python.3.12
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install jq
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: jqlang.jq
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install yq
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: MikeFarah.yq
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install GNU Rust
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: Rustlang.Rust.GNU
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install Lua
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: DEVCOM.Lua
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install LuaJIT
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: DEVCOM.LuaJIT
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install golang
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: GoLang.Go
         source: winget
@@ -446,7 +505,7 @@ properties:
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
         description: Install glazewm
-        allowPrerelease: false
+        allowPrerelease: true
       settings:
         id: glzr-io.glazewm
         source: winget
