fix exports results for tokei source block

--- a/nixcfg/.config/nixcfg/README.org
+++ b/nixcfg/.config/nixcfg/README.org
@@ -26,20 +26,20 @@ Here's how it helps manage everything:
 
 Here's a breakdown of what the ~README.org~ is generating:
 #+NAME: tokei
-#+begin_src sh :results output
+#+begin_src sh :exports results
 tokei ~/.config/nixcfg/*
 #+end_src
 
 #+RESULTS: tokei
-: ===============================================================================
-:  Language            Files        Lines         Code     Comments       Blanks
-: ===============================================================================
-:  Lua                     1           64           35           14           15
-:  Nix                    51         1444         1096          216          132
-:  Org                     1         1981         1504          224          253
-: ===============================================================================
-:  Total                  53         3489         2635          454          400
-: ===============================================================================
+| =============================================================================== |       |       |      |          |        |
+| Language                                                                      | Files | Lines | Code | Comments | Blanks |
+| =============================================================================== |       |       |      |          |        |
+| Lua                                                                           |     1 |    64 |   35 |       14 |     15 |
+| Nix                                                                           |    51 |  1444 | 1096 |      216 |    132 |
+| Org                                                                           |     1 |  1990 | 1513 |      224 |    253 |
+| =============================================================================== |       |       |      |          |        |
+| Total                                                                         |    53 |  3498 | 2644 |      454 |    400 |
+| =============================================================================== |       |       |      |          |        |
 
 ~Nix~ is a powerful package manager for ~Linux~ and ~Unix~ systems that ensures ~reproducible~, ~declarative~, and ~reliable~ software management.
 
